ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  labels:
    app: health
    tier: backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
     paths:
     - path: /health
       pathType: Exact
       backend:
         service:
           name: health-service
           port:
             number: 8000
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/AGerastovskiy(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: health-service
            port:
              number: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: health-service
  labels:
    app: health
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: health
    tier: backend
  ports:
  - port: 8000
    targetPort: 8080
